# Data-Analytics-CLI

./: .gitignore  README.md  app.py  dept_counts.csv  droped_duplicates.csv  finance_only.csv  grouped_by_department_salary.csv  narrow.csv  no_numbers.csv  pyproject.toml  requirements.txt  sample.csv  sorted_by_salary.csv
tests/: test_cli.py
tests/data/: sample.csv
