[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analytics-cli"
version = "0.1.0"
description = "CSV data analytics CLI (Typer + pandas)."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "typer>=0.12",
    "rich>=13",
]

[project-optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
data-cli = "app:run"

[tool.setuptools]
py-modules = ["app"]
